--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="theme-color" content="#1e2327">
+
     <title><%= htmlWebpackPlugin.options.title %></title>
 
     <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-<!--    <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet">-->
+    <!--    <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet">-->
 
     <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.compat.min.css" rel="stylesheet">
 </head>
@@ -18,6 +20,23 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
 </noscript>
+<script>
+    function plusReady() {
+        // 设置系统状态栏背景为红色
+        var type = plus.os.name;
+        if (type == "iOS") {
+            plus.navigator.setStatusBarBackground("#368CBD");
+        } else {
+            plus.navigator.setStatusBarBackground("#black");
+        }
+    }
+
+    if (window.plus) {
+        plusReady();
+    } else {
+        document.addEventListener("plusready", plusReady, false);
+    }
+</script>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
