--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <meta name="theme-color" content="#1e2327">
+    <meta name="theme-color" content="">
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
