--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="theme-color" content="">
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+<!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
+    <title>J K 导航</title>
 
     <script>
         var _hmt = _hmt || [];
