--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="theme-color" content="">
 
-<!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
+    <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
     <title>J K 导航</title>
 
     <script>
@@ -28,6 +28,37 @@
     <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.compat.min.css" rel="stylesheet">
 </head>
 <body>
+
+<!--<div id="he-plugin-simple"></div>-->
+<script>
+    WIDGET = {
+        CONFIG: {
+            "modules": "01234",
+            "background": 5,
+            "tmpColor": "4A4A4A",
+            "tmpSize": "15",
+            "cityColor": "4A4A4A",
+            "citySize": "15",
+            "aqiSize": "15",
+            "weatherIconSize": "20",
+            "alertIconSize": "16",
+            "padding": "0px 0px 0px 0px",
+            "shadow": "0",
+            "language": "auto",
+            "borderRadius": 5,
+            "fixed": "false",
+            "vertical": "middle",
+            "horizontal": "left",
+            "key": "a57958f86f70480d988820933f1d0f87"
+        }
+    }
+    // window.onload = function () {
+    //     document.querySelector('#he-plugin-simple').style.zIndex = 2;
+    // }
+</script>
+<script src="https://widget.heweather.net/simple/static/js/he-simple-common.js?v=1.1"></script>
+
+
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
