--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="referrer" content="no-referrer">
+<!--    <meta name="referrer" content="no-referrer">-->
+
+    <meta name="renderer" content="webkit">
+    <meta name="keywords" content="JK导航">
+    <!--关闭chrome浏览器下翻译插件-->
+    <meta name="google" value="notranslate"/>
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <meta name="theme-color" content="">
+
 
     <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
     <title>J K 导航</title>
