--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<!--    <meta name="referrer" content="no-referrer">-->
+    <!--    <meta name="referrer" content="no-referrer">-->
 
     <meta name="renderer" content="webkit">
     <meta name="keywords" content="JK导航">
