--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 
     <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
-    <title>J K 导航</title>
+    <title>即刻导航</title>
 
     <script>
         var _hmt = _hmt || [];
