--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!--    <meta name="referrer" content="no-referrer">-->
 
     <meta name="renderer" content="webkit">
-    <meta name="keywords" content="JK导航">
+    <meta name="keywords" content="即刻导航">
     <!--关闭chrome浏览器下翻译插件-->
     <meta name="google" value="notranslate"/>
 
